tests/ok/interface_with_fields.cz
// Test interface with fields

iface HasValue {
    i32 value
}

struct Container : HasValue {
    i32 value
}

fn main() i32 {
    Container c = Container { value: 42 }
    
    if not (c is HasValue) {
        return 1
    }
    
    if c.value != 42 {
        return 2
    }
    
    return 0
}
